Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21883

ASSERT on loading qml file

    XMLWordPrintable

Details

    Description

      Loading the attached QML file leads to the following ASSERT

      ASSERT: "e->declarativeType->attachedPropertiesId() != -1" in file qml/v4/qdeclarativev4compiler.cpp, line 313

      This is believed to be due to the "property Item item: Item" line, which no longer asserts if it ends with "Item {}".

      It probably isn't valid QML, but this should lead to a compile error pointing to the offended line instead of an unhelpful assert.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aakenned Aaron Kennedy
            aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes