tests/auto/declarative/v4/data/qtbug_21883.qml
@@ -1,0 +1,5 @@
+import Qt.v4 1.0
+
+Result {
+    property Result dummy: Result
+}
